# vornix-banner

./: .gitignore  Cargo.toml  README.md
examples/: default.rs  main.rs  multiline_manual.rs  styling_demo.rs
src/: animation.rs  banner.rs  error.rs  fonts.rs  lib.rs  renderer.rs  style.rs  utils.rs
src/presets/: ferris.rs  mod.rs
