[package]
name = "vornix-banner"
version = "0.1.0"
edition = "2024"
authors = ["Vornix Technologies"]
description = "Genera y muestra banners de texto ASCII estilo FIGlet profesionales en la terminal, con colores, fuentes personalizables."
license = "MIT"
repository = "https://github.com/AngelEspinal1/vornix-banner.git"
documentation = "https://docs.rs/vornix-banner"
readme = "README.md"
keywords = ["terminal", "banner", "figlet", "ascii-art", "vornix"]
categories = ["command-line-interface", "visualization"]

[dependencies]
crossterm = "0.29.0"
owo-colors = "4.0"
thiserror = "2.0.12"
terminal_size = "0.4.2"
figlet-rs = "0.1.5"
unicode-width = "0.2.0"
regex = "1"
once_cell = "1"

[features]
default = ["presets", "standard_fonts"]
presets = []
standard_fonts = []